--- a/AMS/Views/Clients/Create.cshtml
+++ b/AMS/Views/Clients/Create.cshtml
@@ -12,10 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.TenantId"></select>
-            </div>
+            <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
             <div class="form-group">
                 <label asp-for="ClientTypeId" class="control-label"></label>
                 <select asp-for="ClientTypeId" class ="form-control" asp-items="ViewBag.ClientTypeId"></select>
