--- a/AMS/Views/CustomLists/Create.cshtml
+++ b/AMS/Views/CustomLists/Create.cshtml
@@ -12,10 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class ="form-control" asp-items="ViewBag.TenantId"></select>
-            </div>
+            <input asp-for="TenantId" type="hidden" value="@ViewBag.TenantId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
