--- a/AMS/Views/TodoTaskTypes/Edit.cshtml
+++ b/AMS/Views/TodoTaskTypes/Edit.cshtml
@@ -13,11 +13,8 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="TenantId" class="control-label"></label>
-                <select asp-for="TenantId" class="form-control" asp-items="ViewBag.TenantId"></select>
-                <span asp-validation-for="TenantId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="TenantId" />
+            
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
