--- a/AMS/Views/Locations/Edit.cshtml
+++ b/AMS/Views/Locations/Edit.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ParentId" class="control-label"></label>
-                <select asp-for="ParentId" class="form-control" asp-items="ViewBag.ParentId"></select>
+                <select asp-for="ParentId" class="form-control" asp-items="ViewBag.ParentId"><option value=""></option></select>
                 <span asp-validation-for="ParentId" class="text-danger"></span>
             </div>
             <div class="form-group">
