Add Map and Indicators

--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
   <link href="~/lib/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
   <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-
+  <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
+  <script src="~/lib/leaflet/leaflet.js"></script>
   <environment include="Development">
     <!-- Template styles -->
     <link href="~/css/style.css" rel="stylesheet">
