--- a/AMS/Views/Assets/Index.cshtml
+++ b/AMS/Views/Assets/Index.cshtml
@@ -82,6 +82,7 @@
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-controller="MetaFieldValues" asp-action="Index" asp-route-assetId="@item.Id">Meta</a> |
                                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 </td>
