--- a/AMS/Views/TicketTypes/Index.cshtml
+++ b/AMS/Views/TicketTypes/Index.cshtml
@@ -46,6 +46,7 @@
                                 </td>
                                 <td>
                                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-controller="MetaFieldValues" asp-action="Index" asp-route-ticketTypeId="@item.Id">Meta</a> |
                                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 </td>
