Add interactive floors

--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -6,6 +6,12 @@
                 <span class="badge badge-primary"></span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Floors">
+                <i class="nav-icon icon-map"></i> Interactive Map
+                <span class="badge badge-primary"></span>
+            </a>
+        </li>
         <li class="nav-title">General</li>
 
         <li class="nav-item">
