--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -12,6 +12,12 @@
                 <span class="badge badge-primary"></span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/hangfire">
+                <i class="nav-icon icon-map"></i> Scheduled Tickets
+                <span class="badge badge-primary"></span>
+            </a>
+        </li>
         <li class="nav-title">General</li>
 
         <li class="nav-item">
