--- a/AMS/Views/TicketTypes/Create.cshtml
+++ b/AMS/Views/TicketTypes/Create.cshtml
@@ -24,6 +24,19 @@
                 <span asp-validation-for="Code" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label for="interval" class="control-label">Interval (sec)</label>
+                <input type="number" value="0" name="interval" id="interval" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="repeat" class="control-label">Repeat for</label>
+                <input type="number" value="0" name="repeat" id="repeat" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="summary" class="control-label">Ticket Summary</label>
+                <input name="summary" id="summary" class="form-control" />
+            </div>
+
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
