--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -22,8 +22,17 @@
   <link href="~/lib/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
   <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <link href="~/vendors/fullcalendar-4.4.0/packages/core/main.min.css" rel="stylesheet" />
+  <link href="~/vendors/fullcalendar-4.4.0/packages/daygrid/main.min.css" rel="stylesheet" />
+  <link href="~/vendors/fullcalendar-4.4.0/packages/timegrid/main.min.css" rel="stylesheet" />
+  <link href="~/vendors/fullcalendar-4.4.0/packages/list/main.min.css" rel="stylesheet" />
+  <script src="~/vendors/fullcalendar-4.4.0/packages/core/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/packages/daygrid/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/packages/timegrid/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/packages/list/main.min.js"></script>
   <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
   <script src="~/lib/leaflet/leaflet.js"></script>
+
   <environment include="Development">
     <!-- Template styles -->
     <link href="~/css/style.css" rel="stylesheet">
@@ -102,7 +111,6 @@
     </footer>
 
 
-    <script src="_framework/blazor.server.js"></script>
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
     </environment>
