--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -18,6 +18,12 @@
                 <span class="badge badge-primary"></span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Calendar">
+                <i class="nav-icon icon-calendar"></i> Calendar
+                <span class="badge badge-primary"></span>
+            </a>
+        </li>
         <li class="nav-title">General</li>
 
         <li class="nav-item">
