--- a/AMS/Views/Home/Calendar.cshtml
+++ b/AMS/Views/Home/Calendar.cshtml
@@ -20,6 +20,47 @@
     <!--/.col-->
 </div>
 
+<div class="modal fade" id="dlgAddTodoTask" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form>
+                <div class="modal-header">
+                    <h5 class="modal-title">Add Todo Task</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="idSummary">Summary</label>
+                        <input id="idSummary" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="idStart">Start Date</label>
+                        <input id="idStart" type="datetime" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="idDue">Due Date</label>
+                        <input id="idDue" type="datetime" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="idTicket">Ticket</label>
+                        <select id="idTicket" class="form-control">
+                            <option value=""></option>
+                            <option value="1">Ticket 1</option>
+                            <option value="2">Ticket 2</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 @* view-modals *@
 @section Modals {
 }
@@ -31,23 +72,28 @@
             var calendarEl = document.getElementById('calendar');
 
             var calendar = new FullCalendar.Calendar(calendarEl, {
-                plugins: ['dayGrid', 'timeGrid', 'list'],
-                views: {
-                    dayGrid: {
-                      // options apply to dayGridMonth, dayGridWeek, and dayGridDay views
-                    },
-                    timeGrid: {
-                      // options apply to timeGridWeek and timeGridDay views
-                    },
-                    week: {
-                      // options apply to dayGridWeek and timeGridWeek views
-                    },
-                    day: {
-                      // options apply to dayGridDay and timeGridDay views
-                    }
+                plugins: ['bootstrap', 'interaction', 'dayGrid', 'timeGrid', 'list'],
+                themeSystem: 'bootstrap',
+                defaultView: 'dayGridMonth',
+                header: {
+                    left: 'prevYear,prev,next,nextYear today',
+                    center: 'title',
+                    right: 'dayGridMonth,timeGridWeek,timeGridDay,listWeek'
+                },
+                navLinks: true, // can click day/week names to navigate views
+                editable: true,
+                eventLimit: true, // allow "more" link when too many events,
+                selectable: true,
+                select: function(info) {
+                     // info.start, startStr, end, endStr
+                    $("#idStart").val(info.startStr);
+                    $("#idDue").val(info.endStr);
+                    $("#idSummary").val('New Task');
+                    $('#dlgAddTodoTask').modal('show');
                 },
                 events: @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.Select(x => new { title = x.Title, start = x.StartDate, allDay = true, textColor = "white" })))
                 
+
             });
 
             calendar.render();
