--- a/AMS/Views/Shared/_Layout.cshtml
+++ b/AMS/Views/Shared/_Layout.cshtml
@@ -23,13 +23,20 @@
   <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="~/lib/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="~/vendors/fullcalendar-4.4.0/packages/core/main.min.css" rel="stylesheet" />
+  <link href="~/vendors/fullcalendar-4.4.0/packages/bootstrap/main.min.css" rel="stylesheet" />
+
   <link href="~/vendors/fullcalendar-4.4.0/packages/daygrid/main.min.css" rel="stylesheet" />
   <link href="~/vendors/fullcalendar-4.4.0/packages/timegrid/main.min.css" rel="stylesheet" />
   <link href="~/vendors/fullcalendar-4.4.0/packages/list/main.min.css" rel="stylesheet" />
+
   <script src="~/vendors/fullcalendar-4.4.0/packages/core/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/packages/daygrid/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/packages/timegrid/main.min.js"></script>
   <script src="~/vendors/fullcalendar-4.4.0/packages/list/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/packages/interaction/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/packages/bootstrap/main.min.js"></script>
+  <script src="~/vendors/fullcalendar-4.4.0/examples/js/theme-chooser.js"></script>
+
   <link href="~/lib/leaflet/leaflet.css" rel="stylesheet" />
   <script src="~/lib/leaflet/leaflet.js"></script>
 
