Fill charts with actual statistics

--- a/AMS/Views/Home/Index.cshtml
+++ b/AMS/Views/Home/Index.cshtml
@@ -103,10 +103,10 @@
     <div class="card-columns cols-2">
         <div class="card">
             <div class="card-header">
-                Line Chart
+                Monthly Tickets Chart @DateTime.Today.Year
                 <div class="card-header-actions">
-                    <a href="http://www.chartjs.org" class="card-header-action" target="_blank">
-                        <small class="text-muted">docs</small>
+                    <a href="/Tickets/Index" class="card-header-action" >
+                        <small class="text-muted">tickets</small>
                     </a>
                 </div>
             </div>
@@ -118,10 +118,10 @@
         </div>
         <div class="card">
             <div class="card-header">
-                Bar Chart
+                Tickets By Location @DateTime.Today.Year
                 <div class="card-header-actions">
-                    <a href="http://www.chartjs.org" class="card-header-action" target="_blank">
-                        <small class="text-muted">docs</small>
+                    <a href="/Tickets/Index" class="card-header-action">
+                        <small class="text-muted">tickets</small>
                     </a>
                 </div>
             </div>
@@ -133,10 +133,10 @@
         </div>
         <div class="card">
             <div class="card-header">
-                Doughnut Chart
+                Tickets Status @DateTime.Today.Year
                 <div class="card-header-actions">
-                    <a href="http://www.chartjs.org" class="card-header-action" target="_blank">
-                        <small class="text-muted">docs</small>
+                    <a href="/Tickets/Index" class="card-header-action" >
+                        <small class="text-muted">tickets</small>
                     </a>
                 </div>
             </div>
@@ -149,10 +149,10 @@
         
         <div class="card">
             <div class="card-header">
-                Pie Chart
+                Todo Tasks Status @DateTime.Today.Month
                 <div class="card-header-actions">
-                    <a href="http://www.chartjs.org" class="card-header-action" target="_blank">
-                        <small class="text-muted">docs</small>
+                    <a href="/TodoTasks/Index" class="card-header-action">
+                        <small class="text-muted">tasks</small>
                     </a>
                 </div>
             </div>
