--- a/AMS/Views/Home/_BlankForm.cshtml
+++ b/AMS/Views/Home/_BlankForm.cshtml
@@ -1,8 +1,11 @@
 ﻿@model AMS.Models.AssetType
 
 @{
-    ViewData["Title"] = "Asset Type";
+    ViewData["Title"] = " Type";
     ViewData["Action"] = "Create";
+
+    ViewData["Title"] = " Type";
+    ViewData["Action"] = "Edit";
 }
 
 <div class="row">
@@ -33,7 +36,7 @@
                         <label asp-for="Code" class="col-md-3 col-form-label"></label>
                         <div class="col-md-9">
                             <input asp-for="Code" class="form-control" />
-                            <span class="help-block"><small><i class="fa fa-exclamation-triangle mr-1"></i>Changing code will not affect previously created assets</small></span>
+                            <span class="help-block"><small><i class="fa fa-exclamation-triangle mr-1"></i>Changing code will not affect previously created assets/tickets</small></span>
                             <span asp-validation-for="Code" class="text-danger"></span>
                         </div>
                     </div>
@@ -49,6 +52,46 @@
             </div>
         </form>
 
+    </div>
+</div>
+
+<div class="row">
+    <div class="offset-2 col-md-8">
+        <form asp-action="@ViewBag.Action" class="form-horizontal">
+            <div class="card">
+                <div class="card-header">
+                    <strong>@ViewBag.Title</strong>
+                    Form
+                </div>
+                <div class="card-body">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <!-- Id Hidden -->
+                    <input type="hidden" asp-for="Id" />
+
+                    <!-- TenantId Hidden -->
+                    <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
+
+                    <!-- Name Input -->
+                    <div class="form-group row">
+                        <label asp-for="Name" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <input asp-for="Name" class="form-control" />
+                            <span class="help-block"><small></small></span>
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="card-footer">
+                    <button type="submit" class="btn btn-sm btn-primary">
+                        <i class="fa fa-dot-circle-o"></i> Save
+                    </button>
+                    <button type="reset" class="btn btn-sm btn-danger">
+                        <i class="fa fa-ban"></i> Reset
+                    </button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 
