--- a/AMS/Views/TicketTypes/Create.cshtml
+++ b/AMS/Views/TicketTypes/Create.cshtml
@@ -1,50 +1,55 @@
 ﻿@model AMS.Models.TicketType
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Ticket Type";
+    ViewData["Action"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>TicketType</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input asp-for="TenantId" type="hidden" value="@ViewBag.TenantId" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Code" class="control-label"></label>
-                <input asp-for="Code" class="form-control" />
-                <span asp-validation-for="Code" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label for="interval" class="control-label">Interval (sec)</label>
-                <input type="number" value="0" name="interval" id="interval" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label for="repeat" class="control-label">Repeat for</label>
-                <input type="number" value="0" name="repeat" id="repeat" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label for="summary" class="control-label">Ticket Summary</label>
-                <input name="summary" id="summary" class="form-control" />
-            </div>
+    <div class="offset-2 col-md-8">
+        <form asp-action="@ViewBag.Action" class="form-horizontal">
+            <div class="card">
+                <div class="card-header">
+                    <strong>@ViewBag.Title</strong>
+                    Form
+                </div>
+                <div class="card-body">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <!-- TenantId Hidden -->
+                    <input type="hidden" asp-for="TenantId" value="@ViewData["TenantId"]" />
 
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                    <!-- Name Input -->
+                    <div class="form-group row">
+                        <label asp-for="Name" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <input asp-for="Name" class="form-control" />
+                            <span class="help-block"><small></small></span>
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <!-- Code Input -->
+                    <div class="form-group row">
+                        <label asp-for="Code" class="col-md-3 col-form-label"></label>
+                        <div class="col-md-9">
+                            <input asp-for="Code" class="form-control" />
+                            <span class="help-block"><small><i class="fa fa-exclamation-triangle mr-1"></i>Changing code will not affect previously created tickets</small></span>
+                            <span asp-validation-for="Code" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <button type="submit" class="btn btn-sm btn-primary">
+                        <i class="fa fa-dot-circle-o"></i> Save
+                    </button>
+                    <button type="reset" class="btn btn-sm btn-danger">
+                        <i class="fa fa-ban"></i> Reset
+                    </button>
+                </div>
             </div>
         </form>
-    </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+    </div>
 </div>
 
 @section Scripts {
